add itens hard coded

--- a/src/pages/property.html
+++ b/src/pages/property.html
@@ -115,7 +115,7 @@
         </div>
         <a class="add-button" href="add-property.html">
             <img src="../assets/add.png" alt="Adicionar">
-            Adicionar Propriedade
+            Adicionar
         </a>
     </div>
     <table>
@@ -123,21 +123,121 @@
             <tr>
                 <th>Número da Propriedade</th>
                 <th>Tipo de Propriedade</th>
-                <th>Status</th>
                 <th>Proprietário</th>
                 <th>Valor</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>1000001</td>
                 <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
                 <td class="status-icon status-rented">
                     <img src="../assets/active.png" alt="Alugada">
                     Alugada
                 </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
                 <td>João Silva</td>
                 <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
+            </tr>
+            <tr>
+                <td>1000001</td>
+                <td>Residencial</td>
+                <td>João Silva</td>
+                <td>R$ 500.000,00</td>
+                <td class="status-icon status-rented">
+                    <img src="../assets/active.png" alt="Alugada">
+                    Alugada
+                </td>
             </tr>
         </tbody>
     </table>
