--- a/src/pages/rental.html
+++ b/src/pages/rental.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
 
-        h1 {
+        h3 {
             color: #2c3e50;
         }
 
@@ -115,7 +115,7 @@
         </div>
         <a class="add-button" href="add-rental.html">
             <img src="../assets/add.png" alt="Adicionar">
-            Adicionar Aluguel
+            Adicionar
         </a>
     </div>
     <table>
@@ -144,6 +144,246 @@
                 <td>30/12/2024</td>
                 <td>30/12/2024</td>
                 <td>Depósito</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000002</td>
+                <td>Maria Oliveira</td>
+                <td>1000002</td>
+                <td>R$ 600.000,00</td>
+                <td>R$ 2.500,00</td>
+                <td>31/12/2024</td>
+                <td>31/12/2024</td>
+                <td>31/12/2024</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000003</td>
+                <td>Carlos Souza</td>
+                <td>1000003</td>
+                <td>R$ 550.000,00</td>
+                <td>R$ 2.400,00</td>
+                <td>01/01/2025</td>
+                <td>01/01/2025</td>
+                <td>01/01/2025</td>
+                <td>Fiador</td>
+                <td class="status-icon status-inactive">
+                    <img src="../assets/inactive.png" alt="Inativo">
+                    Inativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000004</td>
+                <td>Ana Costa</td>
+                <td>1000004</td>
+                <td>R$ 650.000,00</td>
+                <td>R$ 2.700,00</td>
+                <td>02/01/2025</td>
+                <td>02/01/2025</td>
+                <td>02/01/2025</td>
+                <td>Depósito</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>1000005</td>
+                <td>Luciana Pereira</td>
+                <td>1000005</td>
+                <td>R$ 700.000,00</td>
+                <td>R$ 2.800,00</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>03/01/2025</td>
+                <td>Seguro</td>
                 <td class="status-icon status-active">
                     <img src="../assets/active.png" alt="Ativo">
                     Ativo
