--- a/src/pages/tenant.html
+++ b/src/pages/tenant.html
@@ -115,7 +115,7 @@
         </div>
         <a class="add-button" href="add-tenant.html">
             <img src="../assets/add.png" alt="Adicionar">
-            Adicionar Inquilino
+            Adicionar
         </a>
     </div>
     <table>
@@ -129,6 +129,66 @@
             </tr>
         </thead>
         <tbody>
+            <tr>
+                <td>097.382.356-93</td>
+                <td>João Silva</td>
+                <td>+55 11 98765-4321</td>
+                <td>joao.silva@example.com</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>097.382.356-93</td>
+                <td>João Silva</td>
+                <td>+55 11 98765-4321</td>
+                <td>joao.silva@example.com</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>097.382.356-93</td>
+                <td>João Silva</td>
+                <td>+55 11 98765-4321</td>
+                <td>joao.silva@example.com</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>097.382.356-93</td>
+                <td>João Silva</td>
+                <td>+55 11 98765-4321</td>
+                <td>joao.silva@example.com</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>097.382.356-93</td>
+                <td>João Silva</td>
+                <td>+55 11 98765-4321</td>
+                <td>joao.silva@example.com</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
+            <tr>
+                <td>097.382.356-93</td>
+                <td>João Silva</td>
+                <td>+55 11 98765-4321</td>
+                <td>joao.silva@example.com</td>
+                <td class="status-icon status-active">
+                    <img src="../assets/active.png" alt="Ativo">
+                    Ativo
+                </td>
+            </tr>
             <tr>
                 <td>097.382.356-93</td>
                 <td>João Silva</td>
