--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -35,8 +35,8 @@
         .sidebar-item {
             margin: 10px 0;
             cursor: pointer;
-            width: 40px; /* Aumentado para melhorar o espaçamento */
-            height: 40px; /* Aumentado para melhorar o espaçamento */
+            width: 40px;
+            height: 40px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -48,8 +48,8 @@
         }
 
         .icon {
-            width: 30px; /* Aumentado */
-            height: 30px; /* Aumentado */
+            width: 30px;
+            height: 30px;
         }
 
         #content {
@@ -63,6 +63,73 @@
             width: 100%;
             height: 100%;
             border: none;
+        }
+
+        /* Estilos do ícone da calculadora */
+        .calculator-icon {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #2c3e50;
+            color: white;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+
+        /* Estilos da calculadora flutuante */
+        .calculator {
+            position: fixed;
+            bottom: 80px;
+            right: 20px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 200px;
+            display: none; /* Inicialmente oculta */
+        }
+
+        .calculator input {
+            width: 100%;
+            padding: 10px;
+            font-size: 20px;
+            margin-bottom: 10px;
+            text-align: right;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .calculator-buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+            width: 100%;
+        }
+
+        .calculator-button {
+            padding: 15px;
+            font-size: 20px;
+            border: 1px solid #ddd;
+            background-color: #f4f4f4;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        .calculator-button:hover {
+            background-color: #ddd;
+        }
+
+        .calculator-button:active {
+            background-color: #ccc;
         }
     </style>
 </head>
@@ -85,7 +152,11 @@
             <div class="sidebar-item" id="graficos" title="Gráfico">
                 <img src="../assets/chart.png" alt="Gráfico" class="icon">
             </div>
+            <div class="sidebar-item" id="configuration" title="Configuração">
+                <img src="../assets/config.png" alt="Configuração" class="icon">
+            </div>
         </div>
+
         <div class="sidebar-item" id="sair" title="Sair">
             <img src="../assets/logout.png" alt="Sair" class="icon">
         </div>
@@ -95,7 +166,71 @@
         <iframe id="content-frame" src=""></iframe>
     </div>
 
+    <!-- Ícone da Calculadora -->
+    <div class="calculator-icon" id="calculator-icon">
+        <i class="fas fa-calculator"></i>
+    </div>
+
+    <!-- Calculadora Flutuante -->
+    <div class="calculator" id="calculator">
+        <input type="text" id="display" disabled />
+        <div class="calculator-buttons">
+            <button class="calculator-button" onclick="appendNumber(7)">7</button>
+            <button class="calculator-button" onclick="appendNumber(8)">8</button>
+            <button class="calculator-button" onclick="appendNumber(9)">9</button>
+            <button class="calculator-button" onclick="appendOperator('+')">+</button>
+
+            <button class="calculator-button" onclick="appendNumber(4)">4</button>
+            <button class="calculator-button" onclick="appendNumber(5)">5</button>
+            <button class="calculator-button" onclick="appendNumber(6)">6</button>
+            <button class="calculator-button" onclick="appendOperator('-')">-</button>
+
+            <button class="calculator-button" onclick="appendNumber(1)">1</button>
+            <button class="calculator-button" onclick="appendNumber(2)">2</button>
+            <button class="calculator-button" onclick="appendNumber(3)">3</button>
+            <button class="calculator-button" onclick="appendOperator('*')">*</button>
+
+            <button class="calculator-button" onclick="appendNumber(0)">0</button>
+            <button class="calculator-button" onclick="clearDisplay()">C</button>
+            <button class="calculator-button" onclick="calculate()">=</button>
+            <button class="calculator-button" onclick="appendOperator('/')">/</button>
+        </div>
+    </div>
+
     <script>
+        const display = document.getElementById('display');
+        const calculator = document.getElementById('calculator');
+        const calculatorIcon = document.getElementById('calculator-icon');
+
+        function appendNumber(number) {
+            display.value += number;
+        }
+
+        function appendOperator(operator) {
+            display.value += ` ${operator} `;
+        }
+
+        function clearDisplay() {
+            display.value = '';
+        }
+
+        function calculate() {
+            try {
+                display.value = eval(display.value);
+            } catch (error) {
+                display.value = 'Erro';
+            }
+        }
+
+        // Toggle visibility of the calculator
+        calculatorIcon.addEventListener('click', () => {
+            if (calculator.style.display === 'none' || calculator.style.display === '') {
+                calculator.style.display = 'flex'; // Show calculator
+            } else {
+                calculator.style.display = 'none'; // Hide calculator
+            }
+        });
+
         const sidebarItems = document.querySelectorAll('.sidebar-item');
         const iframe = document.getElementById('content-frame');
 
@@ -119,6 +254,8 @@
                     targetPage = 'rental.html';
                 } else if (item.id === 'graficos') {
                     targetPage = 'chart.html';
+                }else if (item.id === 'configuration') {
+                    targetPage = 'configuration.html';
                 }
 
                 if (targetPage) {
